--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
         "stylelint": "^16.6.1",
         "stylelint-config-recommended": "^14.0.0"
     },
+    "dependencies": {
+        "esbuild": "^0.24.2"
+    },
     "scripts": {
         "lint:js": "eslint js",
         "lint:css": "stylelint css",
         "lint:html": "htmlhint **/*.html",
         "dev": "npx esbuild js/*.js --bundle --outdir=dist --servedir=.",
-        "build": "npx esbuild js/*.js --bundle --minify --outdir=dist",
-        "build:public": "npm run build && node -e \"const fs = require('fs-extra'); fs.ensureDir('public').then(() => Promise.all(['assets', 'css', 'dist', 'index.html', 'dashboard.html'].map((f) => fs.copy(f, 'public/' + f)))).then(() => console.log('✅ Successfully!'));\""
-    },
-    "dependencies": {
-        "esbuild": "^0.24.2"
+        "build": "npx esbuild js/*.js --bundle --minify --outdir=dist && node -e \"const fs = require('fs-extra'); fs.emptyDirSync('public'); fs.copySync('index.html', 'public/index.html'); fs.copySync('dist', 'public/dist'); fs.copySync('css', 'public/css'); fs.copySync('assets', 'public/assets'); console.log('✅ Build success, public/ is ready for Vercel!');\""
     }
 }
